NYCCHKBK-4622 removing unneeded css that was breaking a menu overflow text issue
Former-commit-id: 8698396da9dd82e780e778f87bb6908363d94626 [formerly 8698396da9dd82e780e778f87bb6908363d94626 [formerly 8698396da9dd82e780e778f87bb6908363d94626 [formerly c5663303171a5065c50313ffa15b5de83946745e]]]
Former-commit-id: 14fa3c92e7b61723a2c38ca4b017f31122570d0c
Former-commit-id: c5ddfa2085e8b65630b711ae0b89fc923a6d54a0
Former-commit-id: e0d587eac08cfa7080927a2fa0e111629e500877

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -775,10 +775,12 @@ table.expense td.mwbe .expense-container > a .drop-down-menu-triangle{
     top:63px;
     right:5px;
 }
+body.page-spending-landing-yeartype-b table.expense td.mwbe .expense-container > a .top-navigation-amount{
+    width:121px;
+}
 table.expense td.mwbe .expense-container > a .top-navigation-amount{
     width: 50px;
     margin: 0 auto;
-    white-space: nowrap;
 }
 table.expense td.mwbe.subvendors .expense-container > a .top-navigation-amount{
     width:75px;
